--- a/index_tetons - Copy.html
+++ b/index_tetons - Copy.html
@@ -82,7 +82,7 @@
           aria-controls="offcanvasNavbarDark">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Wasatch Mountains Snow Weather</a>
+        <a class="navbar-brand" href="#">Teton Mountains Snow Weather</a>
         <div class="offcanvas offcanvas-start text-bg-dark" data-bs-scroll="true" data-bs-backdrop="true" tabindex="-1"
           id="offcanvasNavbarDark" aria-labelledby="offcanvasNavbarDarkLabel">
           <div class="offcanvas-header">
@@ -167,7 +167,7 @@
                 <a class="twitter-timeline"
                   href="https://twitter.com/Dface_killah/lists/1613209019195482115?ref_src=twsrc%5Etfw">A Twitter List
                   by Dface_killah</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>                
               </li> -->
 
             </ul>
@@ -185,11 +185,11 @@
           <div class="row">
             <div class="col-xl-8 mb-4">
               <div class="card border-left-info shadow h-100">
-                <h5 class="card-header">Alta UT Point Forecast</h5>
+                <h5 class="card-header">Rendezvous Mtn. Point Forecast</h5>
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="responsive-plot" id="graphForecast" data-siteID="SLC/107,165">
+                      <div class="responsive-plot" id="graphForecast" data-siteID="RIW/38,144">
                       </div>
                     </div>
                   </div>
@@ -198,7 +198,7 @@
             </div>
             <div class="col-xl-4 mb-4">
               <div class="card border-left-info shadow h-100">
-                <h5 class="card-header">Alta UT 7-Day Forecast</h5>
+                <h5 class="card-header">Rendezvous Mtn. 7-Day Forecast</h5>
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
@@ -336,7 +336,8 @@
               <div class="card shadow mb-4">
                 <h5 class="card-header">Air Temperature</h5>
                 <div class="card-body">
-                  <div class="responsive-plot" id="graphAir" data-siteID="CLN,MLDU1,BRIU1,PCT,CDYBK,LOPU1,BUNUT,BLPU1">
+                  <div class="responsive-plot" id="graphAir" data-siteID="PHBW4,M12WY,JHRV,JHB,SPMBT,GTHW4">
+                  <!-- <div class="responsive-plot" id="air_temp_set_1"> -->
                   </div>
                 </div>
               </div>
@@ -345,7 +346,8 @@
               <div class="card shadow mb-4">
                 <h5 class="card-header">Snow Depth</h5>
                 <div class="card-body">
-                  <div class="responsive-plot" id="graphSnow" data-siteID="CLN,MLDU1,BRIU1,PCT,CDYBK,LOPU1,BUNUT,BLPU1">
+                  <div class="responsive-plot" id="graphSnow" data-siteID="PHBW4,M12WY,JHRV,JHB,SPMBT,GTHW4">
+                  <!-- <div class="responsive-plot" id="snow_depth_set_1"> -->
                   </div>
                 </div>
               </div>
@@ -354,7 +356,8 @@
               <div class="card shadow mb-4">
                 <h5 class="card-header">24 Hour Wind Speed</h5>
                 <div class="card-body">
-                  <div class="responsive-plot" id="graphWindRose" data-siteID="AMB,REY,C99,SOLHP">
+                  <div class="responsive-plot" id="graphWindRose" data-siteID="GTHW4,MGSWY,JHS,SPPBT">
+                  <!-- <div class="responsive-plot" id="wind_rose"> -->
                   </div>
                 </div>
               </div>
@@ -367,7 +370,7 @@
               <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                  Big Cottonwood Canyon (SR-190)
+                  Teton Pass
                 </button>
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
@@ -375,67 +378,35 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-6 mb-4">
                       <div class="card boarder shadow">
-                        <h5 class="card-header">BCC UDOT SIGN
+                        <h5 class="card-header">Teton Pass West
                         </h5>
                         <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam7" alt="image">
+                          <img class="card-img-top" id="teton_cam0" alt="image">
                         </div>
                       </div>
                     </div>
                     <div class="col-xl-4 col-md-6 mb-4">
                       <div class="card boarder shadow">
-                        <h5 class="card-header">Wasatch Blvd @ BCC
+                        <h5 class="card-header">Teton Pass East
                         </h5>
                         <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam0" alt="image">
+                          <img class="card-img-top" id="teton_cam1" alt="image">
                         </div>
                       </div>
                     </div>
                     <div class="col-xl-4 col-md-6 mb-4">
                       <div class="card boarder shadow">
-                        <h5 class="card-header">BCC @ Dogwood MP 4.1</h5>
+                        <h5 class="card-header">Teton Pass Road</h5>
                         <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam1" alt="image">
+                          <img class="card-img-top" id="teton_cam2" alt="image">
                         </div>
                       </div>
                     </div>
                     <div class="col-xl-4 col-md-6 mb-4">
                       <div class="card boarder shadow">
-                        <h5 class="card-header">BCC @ S Curves MP 6.38</h5>
+                        <h5 class="card-header">Teton Pass Mt. Glory</h5>
                         <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam2" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">BCC @ Cardiff Fork MP 10.74</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam3" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">BCC @ Silver Fork MP 12.54</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam4" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">BCC @ Solitude MP 14.5</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam5" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">BCC @ Brighton Circle MP 16</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam6" alt="image">
+                          <img class="card-img-top" id="teton_cam3" alt="image">
                         </div>
                       </div>
                     </div>
@@ -447,7 +418,7 @@
               <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Little Cottonwood Canyon (SR-210)
+                  Jackson Hole Mountain Resort
                 </button>
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
@@ -455,81 +426,57 @@
                   <div class="row">
                     <div class="col-xl-4 col-md-6 mb-4">
                       <div class="card boarder shadow">
-                        <h5 class="card-header">LCC UDOT SIGN</h5>
+                        <h5 class="card-header">Sublet Chair</h5>
                         <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam9" alt="image">
+                          <img class="card-img-top" id="teton_cam4" alt="image">
                         </div>
                       </div>
                     </div>
                     <div class="col-xl-4 col-md-6 mb-4">
                       <div class="card boarder shadow">
-                        <h5 class="card-header">Wasatch Blvd @ LCC</h5>
+                        <h5 class="card-header">JHMR Teton Chair Base</h5>
                         <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam0" alt="image">
+                          <img class="card-img-top" id="teton_cam5" alt="image">
                         </div>
                       </div>
                     </div>
                     <div class="col-xl-4 col-md-6 mb-4">
                       <div class="card boarder shadow">
-                        <h5 class="card-header">INTERSECTION OF HWY 209 & HWY 210</h5>
+                        <h5 class="card-header">JHMR Thunder Chair Top</h5>
                         <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam1" alt="image">
+                          <img class="card-img-top" id="teton_cam6" alt="image">
                         </div>
                       </div>
                     </div>
                     <div class="col-xl-4 col-md-6 mb-4">
                       <div class="card boarder shadow">
-                        <h5 class="card-header">LCC @ MP 5.96</h5>
+                        <h5 class="card-header">JHMR Cody Bowl</h5>
                         <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam2" alt="image">
+                          <img class="card-img-top" id="teton_cam7" alt="image">
                         </div>
                       </div>
                     </div>
                     <div class="col-xl-4 col-md-6 mb-4">
                       <div class="card boarder shadow">
-                        <h5 class="card-header">LCC @ MP 7.4</h5>
+                        <h5 class="card-header">JHMR Sweetwater Gondola</h5>
                         <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam3" alt="image">
+                          <img class="card-img-top" id="teton_cam8" alt="image">
                         </div>
                       </div>
                     </div>
                     <div class="col-xl-4 col-md-6 mb-4">
                       <div class="card boarder shadow">
-                        <h5 class="card-header">LCC @ MP 8.7</h5>
+                        <h5 class="card-header">JHMR Bridger Gondola</h5>
                         <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam4" alt="image">
+                          <img class="card-img-top" id="teton_cam9" alt="image">
                         </div>
                       </div>
                     </div>
                     <div class="col-xl-4 col-md-6 mb-4">
                       <div class="card boarder shadow">
-                        <h5 class="card-header">LCC @ WHITE PINE PARKING MP 9.2</h5>
+                        <h5 class="card-header">JHMR Mountain View</h5>
                         <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam5" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">LCC @ MP 9.7</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam6" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">LCC @ ALTA BYPASS MP 10.95</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam7" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">LCC @ ALTA MP 12.16</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam8" alt="image">
+                          <img class="card-img-top" id="teton_cam10" alt="image">
                         </div>
                       </div>
                     </div>
@@ -537,7 +484,7 @@
                 </div>
               </div>
             </div>
-            <div class="accordion-item">
+            <!-- <div class="accordion-item">
               <h2 class="accordion-header" id="headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -559,7 +506,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -567,10 +514,9 @@
   </main>
 
   <script src="js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="js/cheatsheet.js"></script> -->
-  <script src="js/slc/camera_slc.js" lang="text/javascript"></script>
-  <!-- <script src="js/slc/forecast_slc.js" lang="text/javascript"></script> -->
-  <script src="js/slc/forecast_7day_slc.js"></script>
+  <script src="js/tetons/camera_tetons.js" lang="text/javascript"></script>
+  <script src="js/tetons/forecast_tetons.js" lang="text/javascript"></script>
+  <script src="js/tetons/forecast_7day_tetons.js"></script>
   <script src="js/slc/plot_air.js"></script>
   <script src="js/slc/plot_snow.js"></script>
   <script src="js/slc/plot_wind_rose.js"></script>
