--- a/index - Copy.html
+++ b/index - Copy.html
@@ -82,7 +82,7 @@
           aria-controls="offcanvasNavbarDark">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Wasatch Mountains Snow Weather</a>
+        <a class="navbar-brand" href="#">Bear River Range Snow Weather</a>
         <div class="offcanvas offcanvas-start text-bg-dark" data-bs-scroll="true" data-bs-backdrop="true" tabindex="-1"
           id="offcanvasNavbarDark" aria-labelledby="offcanvasNavbarDarkLabel">
           <div class="offcanvas-header">
@@ -153,23 +153,27 @@
                     Weather Weenies</a>
                   <a class="dropdown-item" href="https://utahskiweather.blogspot.com/" target="_blank">Utah Ski
                     Weather</a>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <h6 class="dropdown-header">Water Supply Data:</h6>
-                  <a class="dropdown-item" href="" target="_blank">NRCS Snotel</a>
-                  <a class="dropdown-item" href="" target="_blank">Basin SWE</a>
-                </ul>
-              </li>
-
-              <!-- <hr class="sidebar-divider">
-              <li class="nav-item active">
-                <a class="twitter-timeline"
-                  href="https://twitter.com/Dface_killah/lists/1613209019195482115?ref_src=twsrc%5Etfw">A Twitter List
-                  by Dface_killah</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-              </li> -->
-
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <h6 class="dropdown-header">Water Supply Data:</h6>
+                    <a class="dropdown-item" href="" target="_blank">NRCS Snotel</a>
+                    <a class="dropdown-item" href="" target="_blank">Basin SWE</a>
+                  </ul>
+                </li>
+  
+                <hr class="sidebar-divider">
+  
+                <li class="nav-item active">
+                  <a class="twitter-timeline"
+                    href="https://twitter.com/Dface_killah/lists/1613209019195482115?ref_src=twsrc%5Etfw">A Twitter List
+                    by Dface_killah</a>
+                  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                  <!-- <a class="twitter-timeline" data-theme="dark" href="https://twitter.com/i/lists/1613209019195482115">A
+                    Twitter List</a>
+                  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
+                </li>
+  
             </ul>
           </div>
         </div>
@@ -178,18 +182,18 @@
 
     <div id="content-wrapper" class="d-flex flex-column">
       <div id="content">
-        <div class="container-fluid">
+        <div class="container-fluid">          
 
           <!-- forecast -->
           <h2>Forecast</h2>
           <div class="row">
             <div class="col-xl-8 mb-4">
               <div class="card border-left-info shadow h-100">
-                <h5 class="card-header">Alta UT Point Forecast</h5>
+                <h5 class="card-header">Naomi Peak Forecast</h5>
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="responsive-plot" id="graphForecast" data-siteID="SLC/107,165">
+                      <div class="responsive-plot" id="graphForecast" data-siteID="SLC/114,227">
                       </div>
                     </div>
                   </div>
@@ -198,7 +202,7 @@
             </div>
             <div class="col-xl-4 mb-4">
               <div class="card border-left-info shadow h-100">
-                <h5 class="card-header">Alta UT 7-Day Forecast</h5>
+                <h5 class="card-header">Naomi Peak 7-Day Forecast</h5>
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
@@ -336,7 +340,7 @@
               <div class="card shadow mb-4">
                 <h5 class="card-header">Air Temperature</h5>
                 <div class="card-body">
-                  <div class="responsive-plot" id="graphAir" data-siteID="CLN,MLDU1,BRIU1,PCT,CDYBK,LOPU1,BUNUT,BLPU1">
+                  <div class="responsive-plot" id="graphAir" data-siteID="TGLU1,UDDU1,FBNI1,LGS,TPKU1,KDNU1">
                   </div>
                 </div>
               </div>
@@ -345,7 +349,7 @@
               <div class="card shadow mb-4">
                 <h5 class="card-header">Snow Depth</h5>
                 <div class="card-body">
-                  <div class="responsive-plot" id="graphSnow" data-siteID="CLN,MLDU1,BRIU1,PCT,CDYBK,LOPU1,BUNUT,BLPU1">
+                  <div class="responsive-plot" id="graphSnow" data-siteID="TGLU1,UDDU1,FBNI1,LGS,TPKU1,KDNU1">
                   </div>
                 </div>
               </div>
@@ -354,207 +358,48 @@
               <div class="card shadow mb-4">
                 <h5 class="card-header">24 Hour Wind Speed</h5>
                 <div class="card-body">
-                  <div class="responsive-plot" id="graphWindRose" data-siteID="AMB,REY,C99,SOLHP">
+                  <div class="responsive-plot" id="graphWindRose" data-siteID="LGP,C8914,PSINK,UCC11">
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
+          <!-- Cameras Content Row -->
           <h2>Traffic Cameras</h2>
-          <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                  Big Cottonwood Canyon (SR-190)
-                </button>
-              </h2>
-              <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
-                <div class="accordion-body">
-                  <div class="row">
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">BCC UDOT SIGN
-                        </h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam7" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">Wasatch Blvd @ BCC
-                        </h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam0" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">BCC @ Dogwood MP 4.1</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam1" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">BCC @ S Curves MP 6.38</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam2" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">BCC @ Cardiff Fork MP 10.74</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam3" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">BCC @ Silver Fork MP 12.54</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam4" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">BCC @ Solitude MP 14.5</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam5" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">BCC @ Brighton Circle MP 16</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="bcc_cam6" alt="image">
-                        </div>
-                      </div>
+          <div class="row">
+            <!-- Camera 1 -->
+            <div class="col-xl-4 col-md-6 mb-4">
+              <div class="card border-left-info shadow h-100 py-2">
+                <div class="card-body">
+                  <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                      <img class="card-img-top" id="cImage0" alt="Card image cap">
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Little Cottonwood Canyon (SR-210)
-                </button>
-              </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
-                <div class="accordion-body">
-                  <div class="row">
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">LCC UDOT SIGN</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam9" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">Wasatch Blvd @ LCC</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam0" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">INTERSECTION OF HWY 209 & HWY 210</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam1" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">LCC @ MP 5.96</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam2" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">LCC @ MP 7.4</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam3" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">LCC @ MP 8.7</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam4" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">LCC @ WHITE PINE PARKING MP 9.2</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam5" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">LCC @ MP 9.7</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam6" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">LCC @ ALTA BYPASS MP 10.95</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam7" alt="image">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">LCC @ ALTA MP 12.16</h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="lcc_cam8" alt="image">
-                        </div>
-                      </div>
+            <!-- Camera 2 -->
+            <div class="col-xl-4 col-md-6 mb-4">
+              <div class="card border-left-info shadow h-100 py-2">
+                <div class="card-body">
+                  <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                      <img class="card-img-top" id="cImage1" alt="Card image cap">
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Parleys (I-80)
-                </button>
-              </h2>
-              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
-                <div class="accordion-body">
-                  <div class="row">
-                    <div class="col-xl-4 col-md-6 mb-4">
-                      <div class="card boarder shadow">
-                        <h5 class="card-header">I-80 @ Parleys Summit
-                        </h5>
-                        <div class="card-body">
-                          <img class="card-img-top" id="i80_cam0" alt="image">
-                        </div>
-                      </div>
+
+            <!-- Camera 3 -->
+            <div class="col-xl-4 col-md-6 mb-4">
+              <div class="card border-left-info shadow h-100 py-2">
+                <div class="card-body">
+                  <div class="row no-gutters align-items-center">
+                    <div class="col mr-2">
+                      <img class="card-img-top" id="cImage2" alt="Card image cap">
                     </div>
                   </div>
                 </div>
@@ -563,14 +408,12 @@
           </div>
         </div>
       </div>
-    </div>
   </main>
 
   <script src="js/bootstrap.bundle.min.js"></script>
   <!-- <script src="js/cheatsheet.js"></script> -->
-  <script src="js/slc/camera_slc.js" lang="text/javascript"></script>
-  <!-- <script src="js/slc/forecast_slc.js" lang="text/javascript"></script> -->
-  <script src="js/slc/forecast_7day_slc.js"></script>
+  <script src="js/logan/camera_logan.js" lang="text/javascript"></script>
+  <script src="js/logan/forecast_7day_logan.js" lang="text/javascript"></script>
   <script src="js/slc/plot_air.js"></script>
   <script src="js/slc/plot_snow.js"></script>
   <script src="js/slc/plot_wind_rose.js"></script>
